--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,8 @@
     "cmake.buildBeforeRun": true,
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "hc06.h": "c",
+        "stdio.h": "c"
     }
 }
